slurm-7988892.out
  File "/var/spool/slurm/job7988892/slurm_script", line 18
    module load anaconda3/5.3.0b
              ^
SyntaxError: invalid syntax
